--- a/src/app/features/admin/manage-category/manage-category.component.html
+++ b/src/app/features/admin/manage-category/manage-category.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Danh mục</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success">Thêm danh mục</button>
+                <button type="button" class="btn btn-success" (click)="handleAddAction()">Thêm danh mục</button>
             </div>
             <div class="card mb-4">
                 
@@ -16,7 +16,7 @@
                                 <th>Office</th>
                                 <th>Age</th>
                                 <th>Start date</th>
-                                <th>Salary</th>
+                                <th>Hành động</th>
                             </tr>
                         </thead>
                         <tfoot>
@@ -26,17 +26,20 @@
                                 <th>Office</th>
                                 <th>Age</th>
                                 <th>Start date</th>
-                                <th>Salary</th>
+                                <th>Hành động</th>
                             </tr>
                         </tfoot>
                         <tbody>
-                            <tr>
+                            <tr >
                                 <td>Thor Walton</td>
                                 <td>Developer</td>
                                 <td>New York</td>
                                 <td>61</td>
                                 <td>2013/08/11</td>
-                                <td>$98,540</td>
+                                <td>
+                                    <button type="button" class="btn text-success" (click)="handleEditAction('string')" ><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Finn Camacho</td>
@@ -44,7 +47,10 @@
                                 <td>San Francisco</td>
                                 <td>47</td>
                                 <td>2009/07/07</td>
-                                <td>$87,500</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Serge Baldwin</td>
@@ -52,7 +58,10 @@
                                 <td>Singapore</td>
                                 <td>64</td>
                                 <td>2012/04/09</td>
-                                <td>$138,575</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Zenaida Frank</td>
@@ -60,7 +69,10 @@
                                 <td>New York</td>
                                 <td>63</td>
                                 <td>2010/01/04</td>
-                                <td>$125,250</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Zorita Serrano</td>
@@ -68,7 +80,10 @@
                                 <td>San Francisco</td>
                                 <td>56</td>
                                 <td>2012/06/01</td>
-                                <td>$115,000</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Jennifer Acosta</td>
@@ -76,7 +91,10 @@
                                 <td>Edinburgh</td>
                                 <td>43</td>
                                 <td>2013/02/01</td>
-                                <td>$75,650</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Cara Stevens</td>
@@ -84,7 +102,10 @@
                                 <td>New York</td>
                                 <td>46</td>
                                 <td>2011/12/06</td>
-                                <td>$145,600</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Hermione Butler</td>
@@ -92,7 +113,10 @@
                                 <td>London</td>
                                 <td>47</td>
                                 <td>2011/03/21</td>
-                                <td>$356,250</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Lael Greer</td>
@@ -100,7 +124,10 @@
                                 <td>London</td>
                                 <td>21</td>
                                 <td>2009/02/27</td>
-                                <td>$103,500</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Jonas Alexander</td>
@@ -108,7 +135,10 @@
                                 <td>San Francisco</td>
                                 <td>30</td>
                                 <td>2010/07/14</td>
-                                <td>$86,500</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Shad Decker</td>
@@ -116,7 +146,10 @@
                                 <td>Edinburgh</td>
                                 <td>51</td>
                                 <td>2008/11/13</td>
-                                <td>$183,000</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Michael Bruce</td>
@@ -124,7 +157,10 @@
                                 <td>Singapore</td>
                                 <td>29</td>
                                 <td>2011/06/27</td>
-                                <td>$183,000</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Donna Snider</td>
@@ -132,7 +168,10 @@
                                 <td>New York</td>
                                 <td>27</td>
                                 <td>2011/01/25</td>
-                                <td>$112,000</td>
+                                <td>
+                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
+                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -140,16 +179,5 @@
             </div>
         </div>
     </main>
-    <footer class="py-4 bg-light mt-auto">
-        <div class="container-fluid px-4">
-            <div class="d-flex align-items-center justify-content-between small">
-                <div class="text-muted">Copyright &copy; Your Website 2023</div>
-                <div>
-                    <a href="#">Privacy Policy</a>
-                    &middot;
-                    <a href="#">Terms &amp; Conditions</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <app-admin-footer></app-admin-footer>
 </div>
