up shop, details

--- a/src/app/features/shop/item-shop/item-shop.component.css
+++ b/src/app/features/shop/item-shop/item-shop.component.css
@@ -11,3 +11,26 @@
     padding-top: 3px !important;
     padding-bottom: 3px !important;
 }
+
+.pagination-controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .pagination-controls button {
+    margin: 0 10px;
+  }
+  
+  .pagination-controls span {
+    font-weight: bold;
+  }
+  
+  .placeholder-item {
+    opacity: 0;
+    pointer-events: none;  /* Đảm bảo không thể nhấp vào */
+    visibility: hidden;
+    height: 100%;          /* Đảm bảo item có chiều cao đầy đủ */
+  }
+  
