--- a/src/app/features/shop/sidebar-shop/sidebar-shop.component.css
+++ b/src/app/features/shop/sidebar-shop/sidebar-shop.component.css
@@ -12,3 +12,10 @@ a{
     color: black;
 }
 
+.custom-sidebar-css{
+    border: none;
+}
+
+.accordion {
+    --bs-accordion-active-color: none !important;
+}
