--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,27 +1,81 @@
-<footer class="footer">
-    <div class="footer-content">
-      <div class="footer-section">
-        <h3>Về chúng tôi</h3>
-        <p>Cửa hàng thời trang cao cấp dành cho giới trẻ</p>
-      </div>
-      <div class="footer-section">
-        <h3>Liên kết</h3>
-        <ul>
-          <li><a href="#">Cửa hàng</a></li>
-          <li><a href="#">Câu hỏi thường gặp</a></li>
-          <li><a href="#">Hướng dẫn thanh toán online</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Mạng xã hội</h3>
-        <div class="social-icons">
-          <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i>Facebook</a>
-          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i>Instagram</a>
-          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i>Twitter</a>
+<footer class="text-center text-lg-start text-white" style="background-color: #000">
+  <div class="container p-4 pb-0">
+    <section class="">
+      <div class="row">
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">
+            HKH Apparel
+          </h6>
+          <p>
+            Trang thương mại điện tử số một dành cho các tín đồ thời trang Genz.
+          </p>
+        </div>
+
+        <hr class="w-100 clearfix d-md-none" />
+
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Hướng dẫn</h6>
+          <p>
+            <a class="text-white" style="text-decoration: none;" href="#">Thanh toán</a>
+          </p>
+          <p>
+            <a class="text-white" style="text-decoration: none;" href="#">Chọn Size</a>
+          </p>
+          <p>
+            <a class="text-white" style="text-decoration: none;" href="#">Câu hỏi thường gặp</a>
+          </p>
+        </div>
+
+        <hr class="w-100 clearfix d-md-none" />
+
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">
+            Chính sách
+          </h6>
+          <p>
+            <a class="text-white" style="text-decoration: none;" href="#">Chính sách đổi trả</a>
+          </p>
+          <p>
+            <a class="text-white" style="text-decoration: none;" href="#">Chính sách bảo hành</a>
+          </p>
+        </div>
+
+        <hr class="w-100 clearfix d-md-none" />
+
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Liên hệ</h6>
+          <p><i class="fas fa-home mr-3"></i> 173 An Dương Vương, Phường 3, Quận 5, HCM</p>
+          <p><i class="fas fa-envelope mr-3"></i> hkhshop&#64;gmail.com</p>
+          <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
         </div>
       </div>
-    </div>
-    <div class="copyright">
-      &copy; 2024 HKH Apparel. All rights reserved.
-    </div>
-  </footer>
+    </section>
+
+    <hr class="my-3">
+
+    <section class="p-3 pt-0">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-7 col-lg-8 text-center text-md-start">
+
+          <div class="p-3">
+            © 2024
+          </div>
+        </div>
+        <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white me-3" role="button"><i
+              class="fab fa-facebook-f"></i></a>
+
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white me-3" role="button"><i
+              class="fab fa-twitter"></i></a>
+
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white me-3" role="button"><i
+              class="fab fa-google"></i></a>
+
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
+              class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </section>
+  </div>
+</footer>
