--- a/src/app/features/shop/sidebar-shop/sidebar-shop.component.html
+++ b/src/app/features/shop/sidebar-shop/sidebar-shop.component.html
@@ -1,68 +1,61 @@
-<section class="mb-3">
-  <h1 class="h5 pb-4">DANH MỤC SẢN PHẨM</h1>
-  <div class="accordion" id="accordionExample">
-    <div class="accordion-item" *ngFor="let category of categories; let i = index">
-      <h2 class="accordion-header">
-        <button
-          class="accordion-button"
-          type="button"
-          [attr.data-bs-toggle]="(i === 0) ? 'collapse' : 'collapse'"
-          [attr.data-bs-target]="'#collapse' + (i + 1)"
-          aria-expanded="i === 0"
-          [attr.aria-controls]="'collapse' + (i + 1)"
-        >
-          {{ category.name }} ({{ category.quantity }})
-        </button>
-      </h2>
-      <div
-        [attr.id]="'collapse' + (i + 1)"
-        class="accordion-collapse collapse"
-        [class.show]="i === 0"
-        data-bs-parent="#accordionExample"
-      >
-        <div class="accordion-body">
-          <ul>
-            <li *ngFor="let detail of category.detailsCategory">
-              <a href={{detail.link}}>{{ detail.name }}</a>
-            </li>
-          </ul>
+<div class="custom-sidebar-css">
+  <section class="mb-3">
+    <h1 class="h5 pb-4">DANH MỤC SẢN PHẨM</h1>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item" *ngFor="let category of categories; let i = index">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" [attr.data-bs-toggle]="(i === 0) ? 'collapse' : 'collapse'"
+            [attr.data-bs-target]="'#collapse' + (i + 1)" aria-expanded="i === 0"
+            [attr.aria-controls]="'collapse' + (i + 1)">
+            {{ category.name }} ({{ category.quantity }})
+          </button>
+        </h2>
+        <div [attr.id]="'collapse' + (i + 1)" class="accordion-collapse collapse" [class.show]="i === 0"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <ul>
+              <li *ngFor="let detail of category.detailsCategory">
+                <a href={{detail.link}}>{{ detail.name }}</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="mb-3">
-  <h1 class="h5 pb-4">LỌC THEO GIÁ</h1>
-  <app-range-slider [minValue]="10" [maxValue]="90"></app-range-slider>
-</section>
+  <section class="mb-3">
+    <h1 class="h5 pb-4">LỌC THEO GIÁ</h1>
+    <app-range-slider [minValue]="10" [maxValue]="90"></app-range-slider>
+  </section>
 
-<section class="mb-3">
-  <h1 class="h5 pb-4">LỌC THEO MÀU SẮC</h1>
-  <div class="form-check" *ngFor="let color of colors">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-    <label class="form-check-label" for="flexCheckDefault">
-      {{color.name}}
-    </label>
-  </div>
-</section>
+  <section class="mb-3">
+    <h1 class="h5 pb-4">LỌC THEO MÀU SẮC</h1>
+    <div class="form-check" *ngFor="let color of colors">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+        {{color.name}}
+      </label>
+    </div>
+  </section>
 
-<section class="mb-3">
-  <h1 class="h5 pb-4">LỌC THEO THƯƠNG HIỆU</h1>
-  <div class="form-check" *ngFor="let brand of brands">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-    <label class="form-check-label" for="flexCheckDefault">
-      {{brand.name}}
-    </label>
-  </div>
-</section>
+  <section class="mb-3">
+    <h1 class="h5 pb-4">LỌC THEO THƯƠNG HIỆU</h1>
+    <div class="form-check" *ngFor="let brand of brands">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+        {{brand.name}}
+      </label>
+    </div>
+  </section>
 
-<section class="mb-3">
-  <h1 class="h5 pb-4">LỌC THEO SIZE</h1>
-  <div class="form-check" *ngFor="let size of sizes">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-    <label class="form-check-label" for="flexCheckDefault">
-      {{size.name}}
-    </label>
-  </div>
-</section>
+  <section class="mb-3">
+    <h1 class="h5 pb-4">LỌC THEO SIZE</h1>
+    <div class="form-check" *ngFor="let size of sizes">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+        {{size.name}}
+      </label>
+    </div>
+  </section>
+</div>
