--- a/src/app/features/shop/special-item-shop/special-item-shop.component.css
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.css
@@ -2,14 +2,20 @@
     width: 100%;
     margin: 10px 0;
     padding: 1rem;
+    border: none;
+    filter: drop-shadow(0 0 0.75rem #ccc);
 }
 .img-container {
     max-width: 200px;
     max-height: 200px;
     overflow: hidden;
     margin: auto;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    filter: drop-shadow(0 0 0.75rem #ccc);
 }
 .img-container img {
     width: 100%;
-    height: auto;
+    height: revert-layer;
+    object-fit: cover;
 }
