--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -2,7 +2,7 @@
 .footer {
     background-color: #333;
     color: #fff;
-    padding: 50px 0 20px;
+    padding: 1rem;
   }
   
   .footer-content {
