--- a/src/app/features/shop/product-details/product-details.component.html
+++ b/src/app/features/shop/product-details/product-details.component.html
@@ -12,7 +12,7 @@
                         <h1 class="h2">{{product.name}}</h1>
                         <p>Thương hiệu: </p>
                         <p>Xuất xứ: </p>
-                        <p>Giá bán: {{product.price}}</p>
+                        <p>Giá bán: {{product.price | currency:'VND':'symbol'}}</p>
                         <div class="d-flex">
                             <p class="me-2">Còn lại: </p>
                             <p style="color: green;">52</p>
