--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -1,162 +1,102 @@
-<section class="h-100 gradient-custom">
-    <div class="container py-5">
-      <div class="row d-flex justify-content-center my-4">
-        <div class="col-md-8">
-          <div class="card mb-4">
-            <div class="card-header py-3">
-              <h5 class="mb-0">Cart - 2 items</h5>
-            </div>
-            <div class="card-body">
-              <!-- Single item -->
-              <div class="row">
-                <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
-                  <!-- Image -->
-                  <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-                    <img src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg"
-                      class="w-100" alt="Blue Jeans Jacket" />
-                    <a href="#!">
-                      <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
-                    </a>
-                  </div>
-                  <!-- Image -->
+<app-header />
+<section class="gradient-custom">
+  <div class="container py-5">
+    <div class="row d-flex justify-content-center my-4">
+      <div class="col-md-8">
+        <div class="card mb-4">
+          <div class="card-header py-3">
+            <h5 class="d-flex mb-0">GIỎ HÀNG (<p style="color: red;">1</p> SẢN PHẨM)</h5>
+          </div>
+          <div class="card-body">
+            <!-- Single item -->
+            <div class="row">
+              <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
+                <!-- Image -->
+                <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
+                  <img src="../../../assets/images/j97.jpg" alt="Blue Jeans Jacket"
+                    style="height: 150px; width: 100%;object-fit: contain;" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
+                  </a>
                 </div>
-  
-                <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
-                  <!-- Data -->
-                  <p><strong>Blue denim shirt</strong></p>
-                  <p>Color: blue</p>
-                  <p>Size: M</p>
-                  <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm me-1 mb-2" data-mdb-tooltip-init
-                    title="Remove item">
-                    <i class="fas fa-trash"></i>
-                  </button>
-                  <!-- Data -->
+                <!-- Image -->
+              </div>
+
+              <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                <!-- Data -->
+                <p><strong>Hào quang rực rỡ</strong></p>
+                <p>Màu sắc: Vàng</p>
+                <p>Size: XXL</p>
+
+                <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm me-1 mb-2"
+                  data-mdb-tooltip-init title="Remove item">
+                  <i class="fas fa-trash"></i>
+                </button>
+                <!-- Data -->
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                <!-- Price -->
+                <div class="d-flex text-start text-md-center">
+                  <p class="me-2">Đơn giá:</p>
+                  <strong>{{9970000 | currency:'VND':'symbol'}}</strong>
                 </div>
-  
-                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                  <!-- Quantity -->
-                  <div class="d-flex mb-4" style="max-width: 300px">
+                <!-- Price -->
+                <!-- Quantity -->
+                <div class="d-flex flex-column mb-4" style="max-width: 300px">
+                  <label class="form-label" for="form1">Số lượng</label>
+                  <div class="d-flex">
                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary px-3 me-2"
                       onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                       <i class="fas fa-minus"></i>
                     </button>
-  
                     <div data-mdb-input-init class="form-outline">
-                      <input id="form1" min="0" name="quantity" value="1" type="number" class="form-control" />
-                      <label class="form-label" for="form1">Quantity</label>
+                      <input id="form1" min="0" name="quantity" value="1" type="number" class="form-control" style="text-align: center;" />
                     </div>
-  
                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary px-3 ms-2"
                       onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
-                  <!-- Quantity -->
-  
-                  <!-- Price -->
-                  <p class="text-start text-md-center">
-                    <strong>$17.99</strong>
-                  </p>
-                  <!-- Price -->
                 </div>
+                <!-- Quantity -->
               </div>
-              <!-- Single item -->
-  
-              <hr class="my-4" />
-  
-              <!-- Single item -->
-              <div class="row">
-                <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
-                  <!-- Image -->
-                  <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-                    <img src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg"
-                      class="w-100" />
-                    <a href="#!">
-                      <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
-                    </a>
-                  </div>
-                  <!-- Image -->
-                </div>
-  
-                <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
-                  <!-- Data -->
-                  <p><strong>Red hoodie</strong></p>
-                  <p>Color: red</p>
-                  <p>Size: M</p>
-  
-                  <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm me-1 mb-2" data-mdb-tooltip-init
-                    title="Remove item">
-                    <i class="fas fa-trash"></i>
-                  </button>
-                  <!-- Data -->
-                </div>
-  
-                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                  <!-- Quantity -->
-                  <div class="d-flex mb-4" style="max-width: 300px">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary px-3 me-2"
-                      onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                      <i class="fas fa-minus"></i>
-                    </button>
-  
-                    <div data-mdb-input-init class="form-outline">
-                      <input id="form1" min="0" name="quantity" value="1" type="number" class="form-control" />
-                      <label class="form-label" for="form1">Quantity</label>
-                    </div>
-  
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary px-3 ms-2"
-                      onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                      <i class="fas fa-plus"></i>
-                    </button>
-                  </div>
-                  <!-- Quantity -->
-  
-                  <!-- Price -->
-                  <p class="text-start text-md-center">
-                    <strong>$17.99</strong>
-                  </p>
-                  <!-- Price -->
-                </div>
-              </div>
-              <!-- Single item -->
             </div>
+            <!-- Single item -->
+            <hr class="my-4" />
           </div>
         </div>
+      </div>
 
-        <div class="col-md-4">
-          <div class="card mb-4">
-            <div class="card-header py-3">
-              <h5 class="mb-0">Summary</h5>
-            </div>
-            <div class="card-body">
-              <ul class="list-group list-group-flush">
-                <li
-                  class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                  Products
-                  <span>$53.98</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                  Shipping
-                  <span>Gratis</span>
-                </li>
-                <li
-                  class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                  <div>
-                    <strong>Total amount</strong>
-                    <strong>
-                      <p class="mb-0">(including VAT)</p>
-                    </strong>
-                  </div>
-                  <span><strong>$53.98</strong></span>
-                </li>
-              </ul>
-  
-              <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block">
-                Go to checkout
-              </button>
-            </div>
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <div class="card-header py-3">
+            <h5 class="mb-0">Chi tiểt thanh toán</h5>
+          </div>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                Sản phẩm
+                <span>{{10000000 | currency:'VND':'symbol'}}</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                Vận chuyển
+                <span>{{30000 | currency:'VND':'symbol'}}</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                <div>
+                  <strong>Tổng cộng</strong>
+                </div>
+                <span><strong>{{10030000 | currency:'VND':'symbol'}}</strong></span>
+              </li>
+            </ul>
+
+            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block">
+              Thanh toán giỏ hàng
+            </button>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+<app-footer />
