--- a/src/app/features/admin/dashboard/dashboard.component.html
+++ b/src/app/features/admin/dashboard/dashboard.component.html
@@ -3,29 +3,19 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Dashboard</h1>
             <div class="row">
-                <div class="col-xl-6">
-                    <div class="card">
-                        <div class="card-header">
-                            Thống kê doanh thu
-                        </div>
-                        <div class="card-body">
-
-                        </div>
-                    </div>
+                <div class="col-xl-7">
+                    <app-revenue></app-revenue>
                 </div>
-                <div class="col-xl-6">
-                    <div class="card">
-                        <div class="card-header">
-                            Thống kê sản phẩm
-                        </div>
-                        <div class="card-body">
-
-                        </div>
-                    </div>
+                <div class="col-xl-5">
+                    <app-product-static></app-product-static>
                 </div>
             </div>
             <div class="row">
-
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
