--- a/src/app/features/admin/dashboard/revenue/revenue.component.html
+++ b/src/app/features/admin/dashboard/revenue/revenue.component.html
@@ -1,2 +1,8 @@
-
-<p>Day la trang dashboard doanh thu</p>
+<div class="card mb-4">
+    <div class="card-header">
+        Thống kê doanh thu
+    </div>
+    <div class="card-body" style="height: 400px;">
+        <canvas id="myAreaChart"></canvas>
+    </div>
+</div>
