--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -47,6 +47,10 @@
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-field"></i></div>
                     Nhà cung cấp
                 </a>
+                <a class="nav-link" href="/admin/importbill">
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-field"></i></div>
+                    Phiếu nhập
+                </a>
                 <a class="nav-link" href="/admin/user">
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                     Người dùng
