Add goods-receipt component files

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-field"></i></div>
                     Nhà cung cấp
                 </a>
-                <a class="nav-link" href="/admin/importbill">
+                <a class="nav-link" href="/admin/goods-receipt">
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-field"></i></div>
                     Phiếu nhập
                 </a>
