--- a/src/app/features/admin/dialog/category/category.component.html
+++ b/src/app/features/admin/dialog/category/category.component.html
@@ -32,6 +32,11 @@
           <label for="desc" class="form-label">Mô tả:</label>
           <textarea class="form-control" id="desc" placeholder="Nhập mô tả" name="desc" rows="3"></textarea>
         </div>
+        <div class="mb-3">
+            <label class="form-check-label me-2" for="active">Trạng thái:</label>  
+            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> Ẩn
+          </div>
         <button type="submit" class="btn btn-success w-100 mt-2">Xác nhận</button>
       </form>
 </div>
