Khoa test bootstrap-datatable

--- a/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
+++ b/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
@@ -1,7 +1,7 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
-            <h1 class="mt-4">Đơn hàng</h1>
+            <h1 class="mt-4">Phiếu nhập</h1>
             <div class="mb-3 mt-4 d-flex align-items-center">
                 <label for="date-from">Ngày Lọc</label>
                 <input name="date-from" type="date" class="ms-3 me-3 w-auto form-control">
@@ -39,7 +39,7 @@
                     <table id="datatablesSimple">
                         <thead>
                             <tr>
-                                <th>Mã đơn hàng</th>
+                                <th>Mã phiếu nhập</th>
                                 <th>Mã khách hàng</th>
                                 <th>Mã giảm giá</th>
                                 <th>Địa chỉ</th>
