--- a/src/app/features/admin/dashboard/dashboard.component.html
+++ b/src/app/features/admin/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
-            <h1 class="mt-4">Dashboard</h1>
+            <h1 class="mt-4">Thống kê</h1>
             <div class="row">
                 <div class="col-xl-7">
                     <app-revenue></app-revenue>
