--- a/src/app/features/admin/manage-country/manage-country.component.html
+++ b/src/app/features/admin/manage-country/manage-country.component.html
@@ -6,172 +6,29 @@
                 <button type="button" class="btn btn-success" (click)="handleAddAction()">Thêm quốc gia</button>
             </div>
             <div class="card mb-4">
-                
+
                 <div class="card-body">
-                    <table id="datatablesSimple">
+                    <table class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
+                        data-search="true" data-pagination="true" data-height="800"
+                        data-page-list="[10, 20, 30, 50, all]">
                         <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Hành động</th>
+                                <th data-field="Nat_ID" data-halign="center" data-align="center" data-width="4"
+                                    data-width-unit="%">
+                                    ID
+                                </th>
+                                <th data-field="Nat_Name">Tên Quốc Gia</th>
+                                <th data-field="Nat_Status" data-halign="center" data-align="center" data-width="200"
+                                    data-width-unit="px" data-formatter="statusFormatter">
+                                    Trạng Thái
+                                </th>
                             </tr>
                         </thead>
-                        <tfoot>
-                            <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Hành động</th>
-                            </tr>
-                        </tfoot>
                         <tbody>
-                            <tr >
-                                <td>Thor Walton</td>
-                                <td>Developer</td>
-                                <td>New York</td>
-                                <td>61</td>
-                                <td>2013/08/11</td>
-                                <td>
-                                    <button type="button" class="btn text-success" (click)="handleEditAction('string')" ><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Finn Camacho</td>
-                                <td>Support Engineer</td>
-                                <td>San Francisco</td>
-                                <td>47</td>
-                                <td>2009/07/07</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Serge Baldwin</td>
-                                <td>Data Coordinator</td>
-                                <td>Singapore</td>
-                                <td>64</td>
-                                <td>2012/04/09</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Zenaida Frank</td>
-                                <td>Software Engineer</td>
-                                <td>New York</td>
-                                <td>63</td>
-                                <td>2010/01/04</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Zorita Serrano</td>
-                                <td>Software Engineer</td>
-                                <td>San Francisco</td>
-                                <td>56</td>
-                                <td>2012/06/01</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Jennifer Acosta</td>
-                                <td>Junior Javascript Developer</td>
-                                <td>Edinburgh</td>
-                                <td>43</td>
-                                <td>2013/02/01</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Cara Stevens</td>
-                                <td>Sales Assistant</td>
-                                <td>New York</td>
-                                <td>46</td>
-                                <td>2011/12/06</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Hermione Butler</td>
-                                <td>Regional Director</td>
-                                <td>London</td>
-                                <td>47</td>
-                                <td>2011/03/21</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Lael Greer</td>
-                                <td>Systems Administrator</td>
-                                <td>London</td>
-                                <td>21</td>
-                                <td>2009/02/27</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Jonas Alexander</td>
-                                <td>Developer</td>
-                                <td>San Francisco</td>
-                                <td>30</td>
-                                <td>2010/07/14</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Shad Decker</td>
-                                <td>Regional Director</td>
-                                <td>Edinburgh</td>
-                                <td>51</td>
-                                <td>2008/11/13</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Michael Bruce</td>
-                                <td>Javascript Developer</td>
-                                <td>Singapore</td>
-                                <td>29</td>
-                                <td>2011/06/27</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Donna Snider</td>
-                                <td>Customer Support</td>
-                                <td>New York</td>
-                                <td>27</td>
-                                <td>2011/01/25</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
+                            <tr *ngFor="let nation of nations">
+                                <td>{{ nation.Nat_ID }}</td>
+                                <td>{{ nation.Nat_Name }}</td>
+                                <td>{{ nation.Nat_Status }}</td>
                             </tr>
                         </tbody>
                     </table>
