--- a/src/app/features/admin/manage-order/manage-order.component.html
+++ b/src/app/features/admin/manage-order/manage-order.component.html
@@ -13,12 +13,12 @@
                 <select id="order-province" name="province" class="ms-3 me-3 w-auto form-select">
                     <option disable value="">-- Chọn --</option>
                 </select>
-    
+
                 <label for="">Quận (Huyện)</label>
                 <select id="order-district" name="district" class="ms-3 me-3 w-auto form-select">
                     <option disable value="">-- Chọn --</option>
                 </select>
-    
+
                 <label for="">Xã (Phường, Thị Trấn)</label>
                 <select id="order-ward" name="ward" class="ms-3 me-3 w-auto form-select">
                     <option disable value="">-- Chọn --</option>
@@ -26,17 +26,57 @@
             </div>
             <div class="mb-4 d-flex align-items-center">
                 <label for="">Tình Trạng</label>
-    
+
                 <select name="order-status" id="status" class="ms-3 me-3 w-auto form-select">
                     <option value="">-- Tất cả --</option>
                 </select>
-    
+
                 <button type="submit" name="submit" class="btn btn-primary">Lọc</button>
             </div>
             <div class="card mb-4">
-                
+
                 <div class="card-body">
-                    <table id="datatablesSimple">
+                    <table class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
+                        data-search="true" data-pagination="true" data-height="800"
+                        data-page-list="[10, 20, 30, 50, all]">
+                        <thead>
+                            <tr>
+                                <th data-field="orderId" data-halign="center" data-align="center" data-width="4"
+                                    data-width-unit="%">
+                                    Mã đơn hàng
+                                </th>
+                                <th data-field="customerId">Mã khách hàng</th>
+                                <th data-field="discountCode">Mã giảm giá</th>
+                                <th data-field="address">Địa chỉ</th>
+                                <th data-field="orderDate">Ngày đặt</th>
+                                <th data-field="discount" data-align="center">Khuyến mãi</th>
+                                <th data-field="totalAmount" data-align="center">Thành tiền</th>
+                                <th data-field="status" data-align="center" data-width="200" data-width-unit="px"
+                                    data-formatter="statusFormatter">
+                                    Tình trạng
+                                </th>
+                                <th data-align="center" data-width="100">Chi tiết</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let order of orders">
+                                <td>{{ order.orderId }}</td>
+                                <td>{{ order.customerId }}</td>
+                                <td>{{ order.discountCode }}</td>
+                                <td>{{ order.address }}</td>
+                                <td>{{ order.orderDate | date:'yyyy-MM-dd HH:mm:ss' }}</td>
+                                <td>{{ order.discount | currency }}</td>
+                                <td>{{ order.totalAmount | currency }}</td>
+                                <td>{{ order.status }}</td> <!-- Hàm getStatus để hiển thị trạng thái -->
+                                <td>
+                                    <button class="btn btn-primary btn-sm viewOrder"
+                                        (click)="handleViewDetailAction()">Xem</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <!-- <table id="datatablesSimple">
                         <thead>
                             <tr>
                                 <th>Mã đơn hàng</th>
@@ -148,7 +188,7 @@
                             </tr>
                             
                         </tbody>
-                    </table>
+                    </table> -->
                 </div>
             </div>
         </div>
