--- a/src/app/features/admin/manage-product/manage-product.component.html
+++ b/src/app/features/admin/manage-product/manage-product.component.html
@@ -6,175 +6,60 @@
                 <button type="button" class="btn btn-success" (click)="handleAddAction()">Thêm sản phẩm</button>
             </div>
             <div class="card mb-4">
-                
                 <div class="card-body">
-                    <table id="datatablesSimple">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Hành động</th>
-                            </tr>
-                        </thead>
-                        <tfoot>
-                            <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Hành động</th>
-                            </tr>
-                        </tfoot>
-                        <tbody>
-                            <tr >
-                                <td>Thor Walton</td>
-                                <td>Developer</td>
-                                <td>New York</td>
-                                <td>61</td>
-                                <td>2013/08/11</td>
-                                <td>
-                                    <button type="button" class="btn text-success" (click)="handleEditAction('string')" ><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Finn Camacho</td>
-                                <td>Support Engineer</td>
-                                <td>San Francisco</td>
-                                <td>47</td>
-                                <td>2009/07/07</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Serge Baldwin</td>
-                                <td>Data Coordinator</td>
-                                <td>Singapore</td>
-                                <td>64</td>
-                                <td>2012/04/09</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Zenaida Frank</td>
-                                <td>Software Engineer</td>
-                                <td>New York</td>
-                                <td>63</td>
-                                <td>2010/01/04</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Zorita Serrano</td>
-                                <td>Software Engineer</td>
-                                <td>San Francisco</td>
-                                <td>56</td>
-                                <td>2012/06/01</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Jennifer Acosta</td>
-                                <td>Junior Javascript Developer</td>
-                                <td>Edinburgh</td>
-                                <td>43</td>
-                                <td>2013/02/01</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Cara Stevens</td>
-                                <td>Sales Assistant</td>
-                                <td>New York</td>
-                                <td>46</td>
-                                <td>2011/12/06</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Hermione Butler</td>
-                                <td>Regional Director</td>
-                                <td>London</td>
-                                <td>47</td>
-                                <td>2011/03/21</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Lael Greer</td>
-                                <td>Systems Administrator</td>
-                                <td>London</td>
-                                <td>21</td>
-                                <td>2009/02/27</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Jonas Alexander</td>
-                                <td>Developer</td>
-                                <td>San Francisco</td>
-                                <td>30</td>
-                                <td>2010/07/14</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Shad Decker</td>
-                                <td>Regional Director</td>
-                                <td>Edinburgh</td>
-                                <td>51</td>
-                                <td>2008/11/13</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Michael Bruce</td>
-                                <td>Javascript Developer</td>
-                                <td>Singapore</td>
-                                <td>29</td>
-                                <td>2011/06/27</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Donna Snider</td>
-                                <td>Customer Support</td>
-                                <td>New York</td>
-                                <td>27</td>
-                                <td>2011/01/25</td>
-                                <td>
-                                    <button type="button" class="btn text-success"><i class="fa-solid fa-pen"></i></button>
-                                    <button type="button" class="btn text-danger"><i class="fa-solid fa-trash"></i></button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <p-table #table [value]="products" dataKey="Pro_ID" [tableStyle]="{ 'min-width': '50rem' }">
+                        <ng-template pTemplate="header">
+                          <tr>
+                            <th>Mã sản phẩm</th>
+                            <th>Tên sản phẩm</th>
+                            <th>Trạng thái</th>
+                            <th>Chi tiết</th>
+                          </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-product>
+                          <tr>
+                            <td>{{ product.Pro_ID }}</td>
+                            <td>{{ product.Pro_name }}</td>
+                            <td>{{ product.Pro_status ? 'Hoạt động' : 'Ngừng bán' }}</td>
+                            <td>
+                              <button type="button" pButton icon="pi pi-chevron-down" (click)="table.toggleRow(product)">Xem</button>
+                            </td>
+                          </tr>
+                        </ng-template>
+                      
+                        <ng-template pTemplate="rowexpansion" let-product>
+                          <td colspan="4">
+                            <div class="p-2">
+                                <!-- Bảng hiển thị danh sách các biến thể sản phẩm -->
+                                <p-table [value]="product.variations">
+                                    <ng-template pTemplate="header">
+                                      <tr>
+                                        <th>Mã biến thể</th>
+                                        <th>Màu sắc</th>
+                                        <th>Kích thước</th>
+                                        <th>Giá</th>
+                                        <th>Số lượng</th>
+                                        <th>Giảm giá</th>
+                                        <th>Trạng thái</th>
+                                      </tr>
+                                    </ng-template>
+                                    
+                                    <ng-template pTemplate="body" let-variation>
+                                      <tr>
+                                        <td>{{ variation.ProV_ID }}</td>
+                                        <td>{{ variation.Col_ID }}</td>
+                                        <td>{{ variation.Siz_ID }}</td>
+                                        <td>{{ variation.ProV_Price | currency: 'VND' }}</td>
+                                        <td>{{ variation.ProV_Quantity }}</td>
+                                        <td>{{ variation.ProV_Discount }}%</td>
+                                        <td>{{ variation.ProV_Status ? 'Hoạt động' : 'Ngừng bán' }}</td>
+                                      </tr>
+                                    </ng-template>
+                                  </p-table>
+                            </div>
+                          </td>
+                        </ng-template>
+                      </p-table>
                 </div>
             </div>
         </div>
