--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -15,7 +15,7 @@
                                 <label for="name" class="form-label title-sign-in">Đăng nhập</label>
                             </div>
                             <div class="col-6">
-                                <a class="d-block float-end title-sign-up" href="">Đăng ký</a>
+                                <a class="d-block float-end title-sign-up" [routerLink]="['/sign-up']">Đăng ký</a>
                             </div>
                         </div>
         
@@ -36,7 +36,7 @@
 
                         <a class="forget-password d-block float-end">Quên mật khẩu?</a>
         
-                        <button type="submit" class="btn btn-dark w-100 mt-5">Đăng Ký</button>
+                        <button type="submit" class="btn btn-dark w-100 mt-5">Đăng Nhập</button>
                       </form>
                 </div>
             </div>
