--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -15,7 +15,7 @@
                                 <label for="name" class="form-label title-sign-up">Đăng ký</label>
                             </div>
                             <div class="col-6">
-                                <a class="d-block float-end title-sign-in">Đăng nhập</a>
+                                <a class="d-block float-end title-sign-in" [routerLink]="['/sign-in']">Đăng nhập</a>
                             </div>
                         </div>
                         <!-- Field: Name -->
