--- a/src/app/features/personal_information/record/record.component.css
+++ b/src/app/features/personal_information/record/record.component.css
@@ -43,14 +43,49 @@
     font-style: italic;
 }
 
+.btn-option {
+    border: none;
+    background-color: #212529;
+}
+
 /* DT */
 @media (max-width: 767px) {
-    
+    .record-container {
+        box-shadow: none;
+    }
+
+    .btn-option {
+        margin-left: 20px;
+    }
+
+    .offfcanvas-option {
+        padding: 10px;
+    }
+
+    .col-infor {
+        order: 2;
+    }
+
+    .col-avatar {
+        order: 1;
+        margin-left: 0 !important;
+    }
 }
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 992px){
-    
+    .record-container {
+        margin: 0 20px;
+    }
+
+    .btn-option {
+        margin-left: 20px;
+        margin-bottom: 15px;
+    }
+
+    .offfcanvas-option {
+        padding: 10px;
+    }
 }
 
 /* DT */
