--- a/src/app/features/admin/manage-brand/manage-brand.component.html
+++ b/src/app/features/admin/manage-brand/manage-brand.component.html
@@ -9,30 +9,25 @@
             </div>
             <div class="card mb-4">
                 <div class="card-body">
-                    <table id="table" class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
-                        data-search="true" data-pagination="true" data-height="800"
-                        data-page-list="[10, 20, 30, 50, all]">
-                        <thead>
-                            <tr>
-                                <th data-field="Bra_ID" data-halign="center" data-align="center" data-width="4"
-                                    data-width-unit="%">
-                                    ID
-                                </th>
-                                <th data-field="Bra_Name">Tên Thương Hiệu</th>
-                                <th data-field="Bra_Status" data-halign="center" data-align="center" data-width="200"
-                                    data-width-unit="px" data-formatter="statusFormatter">
-                                    Trạng Thái
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let brand of brands">
-                                <td>{{ brand.Bra_ID }}</td>
-                                <td>{{ brand.Bra_Name }}</td>
-                                <td>{{ brand.Bra_Status }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="card-body">
+                        <p-table [value]="brands" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Tên Thương Hiệu</th>
+                                    <th>Trạng Thái</th>
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="body" let-brand>
+                                <tr>
+                                    <td>{{ brand.Bra_ID }}</td>
+                                    <td>{{ brand.Bra_Name }}</td>
+                                    <td>{{ brand.Bra_Status }}</td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                    </div>
+                    
                 </div>
             </div>
         </div>
