--- a/src/app/features/admin/manage-category/manage-category.component.html
+++ b/src/app/features/admin/manage-category/manage-category.component.html
@@ -9,32 +9,27 @@
             </div>
             <div class="card mb-4">
                 <div class="card-body">
-                    <table class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
-                        data-search="true" data-pagination="true" data-height="800"
-                        data-page-list="[10, 20, 30, 50, all]">
-                        <thead>
-                            <tr>
-                                <th data-field="Cat_ID" data-halign="center" data-align="center" data-width="4"
-                                    data-width-unit="%">
-                                    ID
-                                </th>
-                                <th data-field="Cat_Name">Tên Danh Mục</th>
-                                <th data-field="Cat_Desc">Mô Tả</th>
-                                <th data-field="Cat_Status" data-halign="center" data-align="center" data-width="200"
-                                    data-width-unit="px" data-formatter="statusFormatter">
-                                    Trạng Thái
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let category of categories">
-                                <td>{{ category.Cat_ID }}</td>
-                                <td>{{ category.Cat_Name }}</td>
-                                <td>{{ category.Cat_Desc }}</td>
-                                <td>{{ category.Cat_Status }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="card-body">
+                        <p-table [value]="categories" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Tên Danh Mục</th>
+                                    <th>Mô Tả</th>
+                                    <th>Trạng Thái</th>
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="body" let-category>
+                                <tr>
+                                    <td>{{ category.Cat_ID }}</td>
+                                    <td>{{ category.Cat_Name }}</td>
+                                    <td>{{ category.Cat_Desc }}</td>
+                                    <td>{{ category.Cat_Status }}</td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                    </div>
+                    
                 </div>
             </div>
         </div>
