--- a/src/app/features/admin/manage-color/manage-color.component.html
+++ b/src/app/features/admin/manage-color/manage-color.component.html
@@ -8,31 +8,27 @@
             <div class="card mb-4">
 
                 <div class="card-body">
-                    <table class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
-                        data-search="true" data-pagination="true" data-height="800"
-                        data-page-list="[10, 20, 30, 50, all]">
-                        <thead>
-                            <tr>
-                                <th data-field="Col_ID" data-halign="center" data-align="center" data-width="4"
-                                    data-width-unit="%">
-                                    ID
-                                </th>
-                                <th data-field="Col_Name">Tên Màu</th>
-                                <th data-field="Col_Status" data-halign="center" data-align="center" data-width="200"
-                                    data-width-unit="px" data-formatter="statusFormatter">
-                                    Trạng Thái
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let color of colors">
-                                <td>{{ color.Col_ID }}</td>
-                                <td>{{ color.Col_Name }}</td>
-                                <td>{{ color.Col_Status }}</td>
-                                <!-- Hiển thị trạng thái bằng hàm getStatus -->
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="card-body">
+                        <p-table [value]="colors" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Tên Màu</th>
+                                    <th>Trạng Thái</th>
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="body" let-color>
+                                <tr>
+                                    <td>{{ color.Col_ID }}</td>
+                                    <td>{{ color.Col_Name }}</td>
+                                    <td>
+                                        {{ color.Col_Status }} 
+                                    </td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                    </div>
+                    
                 </div>
             </div>
         </div>
