--- a/src/app/features/admin/manage-country/manage-country.component.html
+++ b/src/app/features/admin/manage-country/manage-country.component.html
@@ -8,30 +8,27 @@
             <div class="card mb-4">
 
                 <div class="card-body">
-                    <table class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
-                        data-search="true" data-pagination="true" data-height="800"
-                        data-page-list="[10, 20, 30, 50, all]">
-                        <thead>
-                            <tr>
-                                <th data-field="Nat_ID" data-halign="center" data-align="center" data-width="4"
-                                    data-width-unit="%">
-                                    ID
-                                </th>
-                                <th data-field="Nat_Name">Tên Quốc Gia</th>
-                                <th data-field="Nat_Status" data-halign="center" data-align="center" data-width="200"
-                                    data-width-unit="px" data-formatter="statusFormatter">
-                                    Trạng Thái
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let nation of nations">
-                                <td>{{ nation.Nat_ID }}</td>
-                                <td>{{ nation.Nat_Name }}</td>
-                                <td>{{ nation.Nat_Status }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="card-body">
+                        <p-table [value]="nations" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Tên Quốc Gia</th>
+                                    <th>Trạng Thái</th>
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="body" let-nation>
+                                <tr>
+                                    <td>{{ nation.Nat_ID }}</td>
+                                    <td>{{ nation.Nat_Name }}</td>
+                                    <td>
+                                        {{ nation.Nat_Status }} 
+                                    </td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                    </div>
+                    
                 </div>
             </div>
         </div>
