--- a/src/app/features/admin/manage-product/manage-product.component.html
+++ b/src/app/features/admin/manage-product/manage-product.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="card mb-4">
                 <div class="card-body">
-                    <p-table #table [value]="products" dataKey="Pro_ID" [tableStyle]="{ 'min-width': '50rem' }">
+                    <p-table #table [value]="products" dataKey="Pro_ID" [tableStyle]="{ 'min-width': '50rem' }" class="table table-striped table-bordered">
                         <ng-template pTemplate="header">
                           <tr>
                             <th>Mã sản phẩm</th>
