--- a/src/app/features/admin/manage-size/manage-size.component.html
+++ b/src/app/features/admin/manage-size/manage-size.component.html
@@ -8,32 +8,29 @@
             <div class="card mb-4">
 
                 <div class="card-body">
-                    <table class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
-                        data-search="true" data-pagination="true" data-height="800"
-                        data-page-list="[10, 20, 30, 50, all]">
-                        <thead>
-                            <tr>
-                                <th data-field="Siz_ID" data-halign="center" data-align="center" data-width="4"
-                                    data-width-unit="%">
-                                    ID
-                                </th>
-                                <th data-field="Siz_Name">Tên Kích Thước</th>
-                                <th data-field="Siz_Desc">Mô Tả</th>
-                                <th data-field="Siz_Status" data-halign="center" data-align="center" data-width="200"
-                                    data-width-unit="px" data-formatter="statusFormatter">
-                                    Trạng Thái
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let size of sizes">
-                                <td>{{ size.Siz_ID }}</td>
-                                <td>{{ size.Siz_Name }}</td>
-                                <td>{{ size.Siz_Desc }}</td>
-                                <td>{{ size.Siz_Status }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="card-body">
+                        <p-table [value]="sizes" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 20, 30, 50]" [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Tên Kích Thước</th>
+                                    <th>Mô Tả</th>
+                                    <th>Trạng Thái</th>
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="body" let-size>
+                                <tr>
+                                    <td>{{ size.Siz_ID }}</td>
+                                    <td>{{ size.Siz_Name }}</td>
+                                    <td>{{ size.Siz_Desc }}</td>
+                                    <td>
+                                        {{ size.Siz_Status }} 
+                                    </td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                    </div>
+                    
                 </div>
             </div>
         </div>
