--- a/src/app/features/admin/manage-supplier/manage-supplier.component.html
+++ b/src/app/features/admin/manage-supplier/manage-supplier.component.html
@@ -8,34 +8,28 @@
             <div class="card mb-4">
 
                 <div class="card-body">
-                    <table class="table table-striped table-bordered" data-toggle="table" data-locale="vi-VN"
-                        data-search="true" data-pagination="true" data-height="800"
-                        data-page-list="[10, 20, 30, 50, all]">
-                        <thead>
+                    <p-table [value]="suppliers" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 20, 30, 50]" [responsiveLayout]="'scroll'">
+                        <ng-template pTemplate="header">
                             <tr>
-                                <th data-field="Supplier_ID" data-halign="center" data-align="center" data-width="4"
-                                    data-width-unit="%">
-                                    ID
-                                </th>
-                                <th data-field="SupplierName">Tên Nhà Cung Cấp</th>
-                                <th data-field="Address">Địa Chỉ</th>
-                                <th data-field="PhoneNumber">Số Điện Thoại</th>
-                                <th data-field="Status" data-halign="center" data-align="center" data-width="200"
-                                    data-width-unit="px" data-formatter="statusFormatter">
-                                    Trạng Thái
-                                </th>
+                                <th>ID</th>
+                                <th>Tên Nhà Cung Cấp</th>
+                                <th>Địa Chỉ</th>
+                                <th>Số Điện Thoại</th>
+                                <th>Trạng Thái</th>
                             </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let supplier of suppliers">
+                        </ng-template>
+                        <ng-template pTemplate="body" let-supplier>
+                            <tr>
                                 <td>{{ supplier.Supplier_ID }}</td>
                                 <td>{{ supplier.SupplierName }}</td>
                                 <td>{{ supplier.Address }}</td>
                                 <td>{{ supplier.PhoneNumber }}</td>
-                                <td>{{ supplier.Status }}</td>
+                                <td>
+                                    {{ supplier.Status }}
+                                </td>
                             </tr>
-                        </tbody>
-                    </table>
+                        </ng-template>
+                    </p-table>
                 </div>
             </div>
         </div>
